possible fix to the safari browser not showing images. everything else looking good so far.

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -144,12 +144,10 @@ textarea,
 }
 
 .photos {
-    display:block;
     width:100%;
 }
 
 .photos img {
-    display: relative;
     padding:10px;
     width: 50%;
     border-radius: 25px;
